# opengl-renderer

./: .gitignore  CMakeLists.txt  Makefile  readme.md
include/: camera.h  color.h  electrons.h  lights.h  material.h  mesh.h  model.h  proceduralMesh.h  scene.h  shader.h  texture.h
shaders/: frag.glsl  heightField_frag.glsl  heightField_vert.glsl  lightSource_vert.glsl  mesh_frag.glsl  mesh_tesc.glsl  mesh_vert.glsl  texture_frag.glsl  texture_vert.glsl  vert.glsl  water_frag.glsl  water_vert.glsl
src/: camera.cpp  camera.h  frag.glsl  glad.c  lights.cpp  main.cpp  material.cpp  mesh.cpp  mesh.h  model.cpp  proceduralMesh.cpp  shader.cpp  shader.h  texture.cpp  vert.glsl
src/glad/: glad.c  glad.h
src/includes/glad/: glad.h
